--- a/pemweb1.html
+++ b/pemweb1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>pengunaan tag heading</title>
+    <title>penggunaan tag heading</title>
 </head>
 <body>
     <h1>ini adalah judul dengan h1 </h1>
