--- a/pemweb6.html
+++ b/pemweb6.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Belajar Tag Link</h1>
     <p>Saya sedang belajar HTML dari
-    <a href="https://www.youtube.com/watch?v=0zpy1V5OW9c">youtube</a></p>
+    <a href="https://unipdu.ac.id">unipdu</a></p>
 </body>
 </html>
